tests/manifests/networkpolicy-allow-http.yml

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-tcp
spec:
  podSelector:
  ingress:
  - ports:
    - protocol: TCP
      port: 80
