tests/manifests/upload-route.yml
apiVersion: v1
kind: Route
metadata:
  name: cdi-uploadproxy
  namespace: cdi
spec:
  to:
    kind: Service
    name: cdi-uploadproxy
  tls:
    termination: passthrough
