tests/manifests/verify-pvc-pod.yml
---
apiVersion: v1
kind: Template
metadata:
  name: cdi-test
objects:
- kind: Pod
  apiVersion: v1
  metadata:
    name: verify-pod
  spec:
    volumes:
    - name: ${PVC_NAME}
      persistentVolumeClaim:
        claimName: ${PVC_NAME}
    containers:
    - name: runner
      image: "fedora:28"
      command: ["/bin/sh", "-c", "sleep 30; echo I am an executor pod;"]
      volumeMounts:
      - mountPath: "/pvc"
        name: ${PVC_NAME}
parameters:
- name: PVC_NAME
